Added rate of detection depth increase per facet size

--- a/examples/QUESTIONS/FacetSizeVsDetectionDepth.ipynb
+++ b/examples/QUESTIONS/FacetSizeVsDetectionDepth.ipynb
@@ -207,9 +207,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5fe3a23d-fe6f-46ab-9ed0-bc2bcf729dcc",
+   "metadata": {},
+   "source": [
+    "## What is the rate of depth increase for each facet size in each method?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "519ba469-11ba-4ada-a27c-e583e4616854",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thetas = np.radians(np.linspace(0.1, 7.5, 200))\n",
+    "rate1  = 1 / (np.sin(thetas) * np.sqrt(np.pi))\n",
+    "rate2  = np.sqrt(2) / np.sin(thetas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67514a5b-f605-4eca-8d70-1beeae96fb61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(np.degrees(thetas), rate1, color=\"black\", label=r\"$\\frac{1}{\\sin\\theta\\sqrt{\\pi}}$\")\n",
+    "plt.plot(np.degrees(thetas), rate2, color=\"red\", label=r\"$\\frac{1\\sqrt{2}}{\\sin\\theta}$\")\n",
+    "plt.title(\"Rate of Depth Increase\")\n",
+    "plt.ylabel(\"Depth per Facet Size [.]\")\n",
+    "plt.xlabel(\"Theta [deg]\")\n",
+    "plt.yscale(\"log\")\n",
+    "plt.legend(fontsize=12)\n",
+    "plt.grid()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f5ed20b-12af-4236-927b-53afd44524b6",
    "metadata": {},
    "outputs": [],
    "source": []
